--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,16 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=37F51EB54CDA6A348F60B08CCD5B86C9
-ProjectName=First Person BP Game Template
+ProjectName=Hunter Game
+LicensingTerms=Hunter Game
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "E4FBAD984980A6AFE35C4BBA29C904D3", "Hunter Game")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "76CD01AA495DB8EE86F16899F13D6C79", "Hunter Game")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+FullRebuild=True
+
